--- a/packages/fleather/pubspec.yaml
+++ b/packages/fleather/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   parchment:
     path: ../parchment
   characters: ^1.2.0
+  flutter_keyboard_visibility: ^5.4.0
 
 dev_dependencies:
   flutter_test:
