--- a/packages/fleather/pubspec.yaml
+++ b/packages/fleather/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   collection: ^1.16.0
   quill_delta: ^3.0.0-nullsafety.2
   parchment:
-    path: ../parchment
+    git:
+      url: https://github.com/kwestlund/fleather
+      path: packages/parchment
   characters: ^1.2.0
   flutter_keyboard_visibility: ^5.4.0
 
