--- a/packages/fleather/pubspec.yaml
+++ b/packages/fleather/pubspec.yaml
@@ -14,6 +14,7 @@ topics:
   - wysiwyg
   - rich-text-editor
   - widgets
+publish_to: none
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -23,16 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
   collection: ^1.18.0
-  parchment_delta: ^1.0.0
-  parchment: ^1.15.0
-  intl: ^0.19.0
-  flutter_keyboard_visibility: ^6.0.0
-
-dependency_overrides:
   parchment:
     git:
       url: https://github.com/kwestlund/fleather
       path: packages/parchment
+  parchment_delta: ^1.0.0
+  intl: ^0.19.0
+  flutter_keyboard_visibility: ^6.0.0
+
+dependency_overrides:
   characters: ^1.3.0
 
 dev_dependencies:
